<resources>

    <!--    Utility Strings -->
    <string name="hello_blank_fragment">Hello This is a Blank Fragment</string>
    <string name="internet_failed_login_case">Please recheck your credentials entered, your stable internet connection and try again</string>
    <string name="server_failed_case"> Looks like something has gone wrong. Please try logging back in sometime.</string>
    <string name="internet_check">Please check your Internet Connection.</string>
    <string name="feature_availability_msg">Please wait, this feature will available soon</string>

    <!--    Splash Screen Module Strings -->
    <string name="site_link">www.rokad.in</string>


    <!--    Side Navigation Panel Strings -->
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="sign_out_nav_panel_str">Sign Out</string>


    <!--    Login Screen Strings  -->
    <string name="mobile_number">Mobile Number</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="Register">Register</string>
    <string name="invalid_password_alert">Please enter valid password.</string>


    <!--    Forgot Password Module Strings  -->
    <string name="forgot_ped_email_id">Enter the Email Address Associated with your Account</string>
    <string name="we_will_email_you_a_link_to_reset_your_password">We will email you a link to reset your password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="reset_pwd_btn">Reset Password</string>


    <!--    Services Home Screen Strings  -->
    <string name="balance">Balance :</string>
    <string name="hello">Hello:</string>
    <string name="add_to">Add to</string>
    <string name="rs">RS.</string>


    <!--    Mobile Recharge Module Strings -->
    <string name="new_registration">New Registration</string>
    <string name="prepaid_radio_btn">Prepaid Mobile</string>
    <string name="postpaid_radio_btn">Postpaid Mobile</string>
    <string name="repeat_transaction_recharge">Repeat Transaction</string>
    <string name="recharge_amount_txt">Recharge Amount</string>
    <string name="service_charge_txt">Service Charge</string>
    <string name="gst_on_service_charge">GST on Service Charge</string>
    <string name="total_amount_txt">Total Amount</string>
    <string name="see_recharge_plans">See Plans</string>
    <string name="new_recharge_header">New Recharge</string>
    <string name="next">next</string>
    <string name="select_state_hint">Select State</string>
    <string name="mobile_recharge_amount">Enter Amount</string>
    <string name="add_money_to_the_wallet_btn">Add Money to the Wallet</string>
    <string name="service_provider_header">Select Service Provider</string>
    <string name="rokad_wallet_balance_text">Rokad Wallet Balance :</string>
    <string name="make_payment_btn">Make Payment</string>
    <string name="try_again">Try Again</string>
    <string name="app_version">App ver 1.1</string>
    <string name="invalid_mobile_number_alert">Please enter valid phone number.</string>
    <string name="phone_number_check_msg">Please enter a valid phone number</string>
    <string name="valid_recharge_amt_check_msg">Please enter a valid amount minimum of RS.10 You can choose it from available plans.</string>
    <string name="mobile_operator_check_msg">Please select the Operator.</string>
    <string name="recharge_type_chk_msg">Please select Prepaid or Postpaid</string>
    <string name="recharge_type_msg">Please choose Prepaid or Postpaid Recharge Type..!!</string>
    <string name="spinner_prompt">Select Location</string>
    <string name="sender_name">Sender Name</string>
    <string name="transfer_fund">Domestic Money Transfer</string>
    <string name="add_new_sender">Add new sender</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sender_mobile">Sender Mobile Number</string>
    <string name="sender_register">Register Sender</string>
    <string name="proceed">PROCEED</string>
    <string name="confirm_payment_btn">confirm payment</string>
    <string name="wallet_balance_txt">Wallet Balance</string>
    <string name="sender_info_header">Sender Info</string>
    <string name="receiver_info_header">Receiver Info</string>
    <string name="transfer_amount_txt">Transfer Amount</string>
    <string name="processing_charge_header">Processing Charge</string>
    <string name="net_transfer_header">Net Transfer</string>
    <string name="agent_commission_to_be_gained">Agent Commission to be gained</string>
    <string name="agent_commission_to_be_distributed">Agent Commission to be Distributed</string>
    <string name="do_another">Do Another</string>
    <string name="select_beneficiary">Select Beneficiary</string>
    <string name="register_a_new_beneficiary">Add Beneficiary?</string>
    <string name="beneficiary_fst_name">First Name</string>
    <string name="beneficiary_last_name">Last Name</string>
    <string name="sender_imps_transfer_limit_header">Sender IMPS Transfer Limit</string>
    <string name="default_beneficiary_spinner_prompt">No Beneficiaries available</string>
    <string name="default_bank_list_spinner_prompt">Banks List Not Available</string>
    <string name="default_relation_list_spinner_prompt">No Relations Available</string>
    <string name="relation_friend">Friend</string>
    <string name="success">success</string>
    <string name="confirm_account_number">Confirm Bank Account Number</string>
    <string name="transfer_type">Select type</string>
    <string name="imps">IMPS</string>
    <string name="neft">NEFT</string>
    <string name="send_otp">Send OTP?</string>
    <string name="bank_name">Bank Name</string>
    <string name="payment_successful">PAYMENT SUCCESSFUL</string>
    <string name="minimum_amount_alert">Please enter the amount between 100 and 25000.</string>
    <string name="time_out_title">Time out error</string>
    <string name="time_out_msg">Check your network connection and try again.</string>
    <string name="domestic_fund_transfer">Domestic Fund transfer</string>

    <!--    Mantra strings Start-->
    <string name="action_settings">Settings</string>
    <string name="app_title">MANTRA-MFS100-TEST</string>
    <string name="Init">INIT</string>
    <string name="UnInit">UNINIT</string>
    <string name="ExtractISO">ISO(FMR)</string>
    <string name="ExtractWSQ">WSQ</string>
    <string name="MatchISO">MATCH ISO</string>
    <string name="MatchMinutiaeISO">MATCH Minutiae ISO</string>
    <string name="foorLoop">Init/Uninit</string>
    <string name="ClearLog">CLEAR LOG</string>
    <string name="SyncCapture">CAPTURE</string>
    <string name="StopSyncCapture">STOP CAP</string>
    <string name="WriteBit">Write Bit</string>
    <string name="ReadBit">Read Bit</string>
    <string name="ChangeKey">Change Key</string>
    <string name="GetKey">Get Key</string>

    <string-array name="MFS100Ver">
        <item>41</item>
        <item>31</item>
    </string-array>

    <string name="aeps_minimum_amount_alert">Please enter the amount between 100 and 10000.</string>
    <string name="title_activity_preference">Preference</string>
    <string name="error_first_name">Please enter your first name without any spaces and special characters.</string>
    <string name="erroe_last_name">Please enter your last name without any spaces and special characters.</string>
    <string name="error_valid_email">Please enter your valid Email.</string>
    <string name="error_valid_mobile">Please enter your valid Mobile Number.</string>
    <string name="error_valid_aadhaar">Please enter your valid Aadhaar Number.</string>
    <string name="cash_withdrawal">Cash Withdrawal</string>
    <string name="balance_enquire">Balance Enquire</string>
    <string name="aes_select_bank">Please select the bank</string>
    <string name="erroe_capture_thumb">Please capture the thumb data.</string>
    <!--    Mantra Strings End-->
</resources>
