<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/content"
        tools:context="com.rokad.authentication.LoginFragment">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:gravity="center"
            android:textSize="32sp"
            android:textStyle="bold|normal"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="64dp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_ped_email_id"
            android:layout_marginTop="22dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_margin="8dp"
            android:textStyle="bold|normal"
            android:textColor="@android:color/darker_gray"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_will_email_you_a_link_to_reset_your_password"
            android:layout_marginTop="22dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_margin="8dp"
            android:textStyle="bold|normal"
            android:textColor="@android:color/darker_gray"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_address"
            android:textStyle="bold|normal"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_margin="22dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="16dp"
            android:elevation="12dp"
            android:background="@drawable/plane_rounded_edges"
            android:id="@+id/email_addr_forgot_pwd"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_margin="100dp"
        android:layout_below="@+id/content"
        style="@style/submit_button"/>

</RelativeLayout>
