<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    android:layout_height="match_parent"
    tools:context="com.rokad.mobile_recharge.RechargeHomeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/mobile_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobile_recharge_num"
            android:hint="@string/mobile_number_hint"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile_hint"
        android:id="@+id/service_provider_header"
        android:layout_margin="12dp"
        android:text="@string/service_provider_header"
        android:textSize="22sp"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_margin="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/subscriber_list_item"
        android:layout_below="@id/service_provider_header"
        android:id="@+id/services_list"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/state_hint"
        android:layout_marginTop="18dp"
        android:layout_below="@id/services_list">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:id="@+id/state_select"
            android:hint="@string/select_state_hint"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_marginTop="18dp"
        android:weightSum="4"
        android:layout_below="@id/state_hint">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:id="@+id/amount_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recharge_amount"
            android:hint="@string/mobile_recharge_amount"
            android:background="@color/screen_bg"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/see_plans"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_height="wrap_content"
            android:text="@string/see_recharge_plans"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/last_line"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/amount"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mobile_recharge_nxt_btn"
        android:layout_below="@id/last_line"
        android:layout_marginTop="40dp"
        android:text="@string/next"
        style="@style/submit_button"/>

</RelativeLayout>